css/main.scss
---
---

@import 'colors';
@import 'fonts';
@import 'layout';

html, body {
    font-size: 62.5%;
}

body {
    font-family: 'AdobeGaramondRegular', serif;
    font-size: 1.8rem;
    line-height: 1.5;
}

pre {
    background-color: $pre-background-color;
    border: 1px solid $pre-border-color;
    border-radius: 5px;
    padding: 12px;
    overflow: scroll;
    margin: 1.8em 0;
}

h1 {
    font-size: 4.2rem;
}

em {
    font-family: 'AdobeGaramondItalic', serif;
}

a {
    color: $link-color;

    &:hover {
        text-decoration: underline;
    }
}

// Make sure that superscript (e.g. for footnotes) doesn't mess with line
// height. We just lower the superscript a tad.
sup {
    vertical-align: baseline;
    position: relative;
    top: -0.4em;
}

header {
    font-family: 'Open Sans', sans-serif;
    border-right: 1px solid black;
}

header ul, .mobile-header ul, ul.index {
    list-style: none;
}

ul.index li {
    border-bottom: 1px dashed $index-border-color;

    &:last-child {
        border-bottom: none;
    }
}

h1 a {
    text-decoration: none;
    color: inherit;

    &:hover {
        text-decoration: underline;
    }
}

.footnotes {
    overflow-wrap: break-word;
}

.nobr {
    white-space: nowrap;
}

.mobile-header {
    border-bottom: 1px dashed $index-border-color;
}

.arrow-down, .arrow-up {
    width: 0;
    height: 0;
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
}

.arrow-down {
    border-top: 10px solid darkgray;
}

.arrow-up {
    border-bottom: 10px solid black;
}

.closed {
    display: none;
}

